首页数据动态加载,上拉,下拉事件效果增加

--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,6 +1,6 @@
 <!--pages/home/home.wxml-->
-<!-- 头部搜索 -->
 <view class="page">
+  <!-- 头部搜索 -->
   <view class="page__bd">
     <view class="weui-search-bar">
       <view class="weui-search-bar__form">
@@ -41,99 +41,49 @@
       </navigator>
     </view>
   </view>
-</view>
-<!-- 滚动图 -->
-<view class='page'>
+
+  <!-- 滚动图 -->
   <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
-    <block wx:for="{{imgUrls}}">
+    <block wx:for="{{imgUrls}}" wx:key="{{i}}">
       <swiper-item>
         <image src="{{item}}" class="slide-image" mode="widthFix" />
       </swiper-item>
     </block>
   </swiper>
-</view>
 
-<!-- 列表 -->
-<view class="weui-panel__bd">
-  <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-      <image class="weui-media-box__thumb" src="http://imgs0518.1f.cn/0518/201805/floors_img/5720_f_1525687584390_L.jpg" />
-    </view>
-    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-      <view class="weui-media-box__title">同科·汇丰小镇</view>
-      <view class="weui-flex weui-media-box__info">
-      <view class="weui-flex__item" style="color: red;">评分4分</view>
-      <view class="weui-flex__item" style="text-align: right;">6000元/㎡</view>
-      </view>
-      <view class="weui-media-box__desc">
-        开发区 猴嘴板块
-      </view>
-      <view class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</view>
-    </view>
-  </navigator>
-  <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-      <image class="weui-media-box__thumb" src="http://imgs0518.1f.cn/0518/201805/floors_img/5720_f_1525687584390_L.jpg" />
-    </view>
-    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-      <view class="weui-media-box__title">同科·汇丰小镇</view>
-      <view class="weui-flex weui-media-box__info">
-        <view class="weui-flex__item" style="color: red;">评分4分</view>
-        <view class="weui-flex__item" style="text-align: right;">6000元/㎡</view>
-      </view>
-      <view class="weui-media-box__desc">
-        开发区 猴嘴板块
-      </view>
-      <view class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</view>
-    </view>
-  </navigator>
-  <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-      <image class="weui-media-box__thumb" src="http://imgs0518.1f.cn/0518/201805/floors_img/5720_f_1525687584390_L.jpg" />
-    </view>
-    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-      <view class="weui-media-box__title">同科·汇丰小镇</view>
-      <view class="weui-flex weui-media-box__info">
-        <view class="weui-flex__item" style="color: red;">评分4分</view>
-        <view class="weui-flex__item" style="text-align: right;">6000元/㎡</view>
-      </view>
-      <view class="weui-media-box__desc">
-        开发区 猴嘴板块
-      </view>
-      <view class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</view>
-    </view>
-  </navigator>
-  <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-      <image class="weui-media-box__thumb" src="http://imgs0518.1f.cn/0518/201805/floors_img/5720_f_1525687584390_L.jpg" />
-    </view>
-    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-      <view class="weui-media-box__title">同科·汇丰小镇</view>
-      <view class="weui-flex weui-media-box__info">
-        <view class="weui-flex__item" style="color: red;">评分4分</view>
-        <view class="weui-flex__item" style="text-align: right;">6000元/㎡</view>
-      </view>
-      <view class="weui-media-box__desc">
-        开发区 猴嘴板块
-      </view>
-      <view class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</view>
-    </view>
-  </navigator>
-  <navigator url="" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
-    <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
-      <image class="weui-media-box__thumb" src="http://imgs0518.1f.cn/0518/201805/floors_img/5720_f_1525687584390_L.jpg" />
-    </view>
-    <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
-      <view class="weui-media-box__title">同科·汇丰小镇</view>
-      <view class="weui-flex weui-media-box__info">
-        <view class="weui-flex__item" style="color: red;">评分4分</view>
-        <view class="weui-flex__item" style="text-align: right;">6000元/㎡</view>
-      </view>
-      <view class="weui-media-box__desc">
-        开发区 猴嘴板块
-      </view>
-      <view class="weui-media-box__desc">由各种物质组成的巨型球状天体，叫做星球。星球有一定的形状，有自己的运行轨道。</view>
-    </view>
-  </navigator>
+  <!-- 列表 -->
+  <view class="weui-panel__bd">
+    <block wx:for="{{listdata}}" wx:key="index">
+      <navigator url="../floors/floors?id='{{item.id}}'" class="weui-media-box weui-media-box_appmsg" hover-class="weui-cell_active">
+        <view class="weui-media-box__hd weui-media-box__hd_in-appmsg">
+          <image class="weui-media-box__thumb" src="{{item.logo}}" />
+        </view>
+        <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
+          <view class="weui-media-box__title">{{item.name}}</view>
+          <view class="weui-flex weui-media-box__info">
+            <view class="weui-flex__item">评分{{item.koubeiindex}}分</view>
+            <view class="weui-flex__item" style="text-align: right;color: red;">{{item.price}}</view>
+          </view>
+          <view class="weui-media-box__desc">
+            {{item.regionName}} {{item.plateName}}
+          </view>
+          <view class="weui-media-box__desc">{{item.dongtai.jd_introduction}}</view>
+        </view>
+      </navigator>
+    </block>
+  </view>
 
+  <!-- 底部动态样式-->
+  <view class="page__bd">
+    <view class="weui-loadmore" hidden="{{isHideLoadMore}}">
+      <view class="weui-loading"></view>
+      <view class="weui-loadmore__tips">正在加载</view>
+    </view>
+    <view class="weui-loadmore weui-loadmore_line" hidden="{{isHideLoadMoreCompany}}">
+      <view class="weui-loadmore__tips weui-loadmore__tips_in-line">我是有底线的</view>
+    </view>
+    <view class="weui-loadmore weui-loadmore_line weui-loadmore_dot" hidden="{{isHideLoadMore}}">
+      <view class="weui-loadmore__tips weui-loadmore__tips_in-line weui-loadmore__tips_in-dot"></view>
+    </view>
+  </view>
 </view>
