--- a/pages/home/home.wxss
+++ b/pages/home/home.wxss
@@ -20,3 +20,23 @@
 .slide-image {
   width: 100%;
 }
+.weui-media-box__hd_in-appmsg {
+  margin-right:0.8em;
+  width:120px;
+  height:90px;
+  line-height:60px;
+  text-align:center;
+
+}
+
+.weui-media-box__info {
+  margin-top:5px;
+  padding-bottom:5px;
+  font-size:13px;
+  color:#cecece;
+  line-height:1em;
+  list-style:none;
+  overflow:hidden;
+
+}
+
