--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -60,14 +60,14 @@
         </view>
         <view class="weui-media-box__bd weui-media-box__bd_in-appmsg">
           <view class="weui-media-box__title">{{item.name}}</view>
-          <view class="weui-flex weui-media-box__info">
+          <view class="weui-flex weui-media-box__info" style="margin-top: 2px;">
             <view class="weui-flex__item">评分{{item.koubeiindex}}分</view>
             <view class="weui-flex__item" style="text-align: right;color: red;">{{item.price}}</view>
           </view>
-          <view class="weui-media-box__desc">
+          <view class="weui-media-box__desc" style="margin-top: 2px;">
             {{item.regionName}} {{item.plateName}}
           </view>
-          <view class="weui-media-box__desc">{{item.dongtai.jd_introduction}}</view>
+          <view class="weui-media-box__desc" style="margin-top:2px;overflow:hidden;text-overflow:ellipsis;display:-webkit-box;-webkit-box-orient:vertical;-webkit-line-clamp:1;">{{item.dongtai.jd_introduction}}</view>
         </view>
       </navigator>
     </block>
